// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1 images, unchecked 1`] = `
<div
  className="image_area"
>
  <div>
    <div
      className="image_info"
    >
      <img
        alt="https://nishikawa.blob.core.windows.net/images/steve/2020/10/15/01.jpg?sv=2019-07-07&sr=c&si=myPolicyPS&sig=FkKJ4nXCiqzDYjbSaDfqli%2FnErPRTKrD%2BUQfH0MT3ac%3D"
        className="image"
        onClick={[Function]}
        src="https://nishikawa.blob.core.windows.net/images/steve/2020/10/15/01.jpg?sv=2019-07-07&sr=c&si=myPolicyPS&sig=FkKJ4nXCiqzDYjbSaDfqli%2FnErPRTKrD%2BUQfH0MT3ac%3D"
      />
      <form>
        <input
          checked={false}
          className="image_checkbox"
          type="checkbox"
          value="https://nishikawa.blob.core.windows.net/images/steve/2020/10/15/01.jpg?sv=2019-07-07&sr=c&si=myPolicyPS&sig=FkKJ4nXCiqzDYjbSaDfqli%2FnErPRTKrD%2BUQfH0MT3ac%3D"
        />
      </form>
      steve
      <br />
      2020/10/15
    </div>
  </div>
</div>
`;

exports[`2 images, 1 checked 1`] = `
<div
  className="image_area"
>
  <div>
    <div
      className="image_info"
    >
      <img
        alt="https://nishikawa.blob.core.windows.net/images/steve/2020/10/15/01.jpg?sv=2019-07-07&sr=c&si=myPolicyPS&sig=FkKJ4nXCiqzDYjbSaDfqli%2FnErPRTKrD%2BUQfH0MT3ac%3D"
        className="image"
        onClick={[Function]}
        src="https://nishikawa.blob.core.windows.net/images/steve/2020/10/15/01.jpg?sv=2019-07-07&sr=c&si=myPolicyPS&sig=FkKJ4nXCiqzDYjbSaDfqli%2FnErPRTKrD%2BUQfH0MT3ac%3D"
      />
      <form>
        <input
          checked={true}
          className="image_checkbox"
          type="checkbox"
          value="https://nishikawa.blob.core.windows.net/images/steve/2020/10/15/01.jpg?sv=2019-07-07&sr=c&si=myPolicyPS&sig=FkKJ4nXCiqzDYjbSaDfqli%2FnErPRTKrD%2BUQfH0MT3ac%3D"
        />
      </form>
      steve
      <br />
      2020/10/15
    </div>
  </div>
  <div>
    <div
      className="image_info"
    >
      <img
        alt="https://nishikawa.blob.core.windows.net/images/tom/2020/09/12/01.jpg?sv=2019-07-07&sr=c&si=myPolicyPS&sig=FkKJ4nXCiqzDYjbSaDfqli%2FnErPRTKrD%2BUQfH0MT3ac%3D"
        className="image"
        onClick={[Function]}
        src="https://nishikawa.blob.core.windows.net/images/tom/2020/09/12/01.jpg?sv=2019-07-07&sr=c&si=myPolicyPS&sig=FkKJ4nXCiqzDYjbSaDfqli%2FnErPRTKrD%2BUQfH0MT3ac%3D"
      />
      <form>
        <input
          checked={false}
          className="image_checkbox"
          type="checkbox"
          value="https://nishikawa.blob.core.windows.net/images/tom/2020/09/12/01.jpg?sv=2019-07-07&sr=c&si=myPolicyPS&sig=FkKJ4nXCiqzDYjbSaDfqli%2FnErPRTKrD%2BUQfH0MT3ac%3D"
        />
      </form>
      tom
      <br />
      2020/09/12
    </div>
  </div>
</div>
`;

exports[`2 images, all checked 1`] = `
<div
  className="image_area"
>
  <div>
    <div
      className="image_info"
    >
      <img
        alt="https://nishikawa.blob.core.windows.net/images/steve/2020/10/15/01.jpg?sv=2019-07-07&sr=c&si=myPolicyPS&sig=FkKJ4nXCiqzDYjbSaDfqli%2FnErPRTKrD%2BUQfH0MT3ac%3D"
        className="image"
        onClick={[Function]}
        src="https://nishikawa.blob.core.windows.net/images/steve/2020/10/15/01.jpg?sv=2019-07-07&sr=c&si=myPolicyPS&sig=FkKJ4nXCiqzDYjbSaDfqli%2FnErPRTKrD%2BUQfH0MT3ac%3D"
      />
      <form>
        <input
          checked={true}
          className="image_checkbox"
          type="checkbox"
          value="https://nishikawa.blob.core.windows.net/images/steve/2020/10/15/01.jpg?sv=2019-07-07&sr=c&si=myPolicyPS&sig=FkKJ4nXCiqzDYjbSaDfqli%2FnErPRTKrD%2BUQfH0MT3ac%3D"
        />
      </form>
      steve
      <br />
      2020/10/15
    </div>
  </div>
  <div>
    <div
      className="image_info"
    >
      <img
        alt="https://nishikawa.blob.core.windows.net/images/tom/2020/09/12/01.jpg?sv=2019-07-07&sr=c&si=myPolicyPS&sig=FkKJ4nXCiqzDYjbSaDfqli%2FnErPRTKrD%2BUQfH0MT3ac%3D"
        className="image"
        onClick={[Function]}
        src="https://nishikawa.blob.core.windows.net/images/tom/2020/09/12/01.jpg?sv=2019-07-07&sr=c&si=myPolicyPS&sig=FkKJ4nXCiqzDYjbSaDfqli%2FnErPRTKrD%2BUQfH0MT3ac%3D"
      />
      <form>
        <input
          checked={true}
          className="image_checkbox"
          type="checkbox"
          value="https://nishikawa.blob.core.windows.net/images/tom/2020/09/12/01.jpg?sv=2019-07-07&sr=c&si=myPolicyPS&sig=FkKJ4nXCiqzDYjbSaDfqli%2FnErPRTKrD%2BUQfH0MT3ac%3D"
        />
      </form>
      tom
      <br />
      2020/09/12
    </div>
  </div>
</div>
`;
